Fixing z-index for sticky navbar

--- a/scss/components/header/header.scss
+++ b/scss/components/header/header.scss
@@ -1,14 +1,16 @@
 @import '../../colors';
+@import '../../z-index';
 
 .header {
   position: sticky;
   top: 0;
+  z-index: $max-level;
   background-color: $website-background-color;
   box-shadow: 0px 0px 2px $box-shadow-color;
 
   &__logo {
     margin-left: 5px;
-    width: 110px;
+    width: 120px;
     height: auto;
   }
 }
